# Wallpaper_power_switch

./: CMakeLists.txt  LICENSE  README.md  com.flames.wallpaper-power-switch.plist  install.sh  wallpaper-power-switch.sh
docs/superpowers/plans/: 2026-06-13-qt-desktop-app.md
docs/superpowers/specs/: 2026-06-13-qt-desktop-app-design.md
resources/: icon.icns
src/: AppManager.cpp  AppManager.h  AppValidator.cpp  AppValidator.h  ConflictResolver.cpp  ConflictResolver.h  MainWindow.cpp  MainWindow.h  PowerMonitor.cpp  PowerMonitor.h  WallpaperManager.cpp  WallpaperManager.h  main.cpp
